Update client data fix

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,9 +4,10 @@ framework = arduino
 monitor_speed = 115200
 lib_deps =
     FastLED@^3.4.0
-    GyverHub@^1.6.3
+    ESP8266WebServer@^1.0
+    ESpWiFi@^1.0
+    WebSockets@^2.7.1
     
-
 [env:d1_mini]
 platform = espressif8266
 
