Saving wifi config in EEPROM added. Changing STA settings in web added.

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,7 @@ lib_deps =
     ESP8266WebServer@^1.0
     ESpWiFi@^1.0
     WebSockets@^2.7.1
+    FileData@^1.0.6
     
 [env:d1_mini]
 platform = espressif8266
